<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="118dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="26dp">

        <TextView
            android:id="@+id/autor_livro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="97dp" />

        <TextView
            android:id="@+id/ano_livro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autor"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="173dp"
            tools:layout_editor_absoluteY="45dp" />

        <TextView
            android:id="@+id/titulo_livro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ano"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="91dp"
            tools:layout_editor_absoluteY="136dp" />

        <TextView
            android:id="@+id/nota_livro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nota"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="91dp"
            tools:layout_editor_absoluteY="136dp" />

    </LinearLayout>

    <Button
        android:id="@+id/proximo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="294dp"
        android:text="@string/proximo"
        android:onClick="proximo_rg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints,OnClick" />

    <Button
        android:id="@+id/anterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="294dp"
        android:text="@string/anterior"
        android:onClick="anterior_rg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints,OnClick" />


</android.support.constraint.ConstraintLayout>