<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">


    <EditText
        android:id="@+id/autor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="98dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/ano"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="98dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="97dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textLongMessage"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/autor"
        tools:ignore="MissingConstraints" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="61dp"
        android:layout_marginTop="14dp"
        android:numStars="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/ano"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="16dp"
        android:text="@string/autor"
        app:layout_constraintBaseline_toBaselineOf="@+id/autor"
        app:layout_constraintEnd_toStartOf="@+id/autor"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="119dp"
        android:text="@string/titulo"
        app:layout_constraintEnd_toStartOf="@+id/titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="16dp"
        android:text="@string/ano"
        app:layout_constraintBottom_toBottomOf="@+id/ano"
        app:layout_constraintEnd_toStartOf="@+id/ano"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="16dp"
        android:text="@string/avalia"
        app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
        app:layout_constraintEnd_toStartOf="@+id/ratingBar"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/salvar"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:text="@string/salvar"
        android:onClick="save"
        app:layout_constraintBottom_toTopOf="@+id/cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,OnClick" />

    <Button
        android:id="@+id/cancelar"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="69dp"
        android:text="@string/cancelar"
        android:onClick="cancell"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,OnClick" />
</android.support.constraint.ConstraintLayout>